Added translation identifiers for all websites.

--- a/client/app/html/user_main_helpers/google_translate_meta_tags.html
+++ b/client/app/html/user_main_helpers/google_translate_meta_tags.html
@@ -3,6 +3,29 @@
 <meta name="google-translate-customization" content="7d7c1589bc4ae03b-641c2835fca7120b-g015979a8f0483c92-16"></meta>
 {% endifequal %}
 
+{% ifequal app_name "ILikeLanguages" %}
+<meta name="google-translate-customization" content="2449e9d43974fd79-f3f23b2e2d82e5c7-g37612af9c1df2ebc-12"></meta>
+{% endifequal %}
+
+{% ifequal app_name 'SingletonSearch' %}
+<meta name="google-translate-customization" content="7b9db68b156f55c5-7592b3cd5a35de6f-g6adc778d299b9aa2-13"></meta>
+{% endifequal %}
+
+{% ifequal app_name 'LesbianHeart' %}
+<meta name="google-translate-customization" content="9b9062bf66de42ad-792cda37a947ea7d-g23f240dd3b97ffda-10"></meta>
+{% endifequal %}
+
+{% ifequal app_name 'GaySetup' %}
+<meta name="google-translate-customization" content="fb4ee12633971ea1-323d5c719177476a-gac26d9abb856725f-c"></meta>
+{% endifequal %}
+
+{% ifequal app_name 'SwingerSetup' %}
+<meta name="google-translate-customization" content="166520d8aef82cd5-82d5b2eaa1180689-g549fd277ed118b3b-10"></meta>
+{% endifequal %}
+
+{% ifequal app_name 'MellowDating' %}
+<meta name="google-translate-customization" content="56dade8241e751b1-f3fa7c3fde92d431-gccd5d7b45d4c19c4-10"></meta>
+{% endifequal %}
 
 <!-- The following code is used for doing the google translation -->
 <script type="text/javascript">
