--- a/client/app/html/user_main_helpers/google_translate_meta_tags.html
+++ b/client/app/html/user_main_helpers/google_translate_meta_tags.html
@@ -30,7 +30,16 @@
 <!-- The following code is used for doing the google translation -->
 <script type="text/javascript">
 function googleTranslateElementInit() {
-  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.FloatPosition.TOP_RIGHT, multilanguagePage: true, gaTrack: true, gaId: '{{ analytics_id }}'}, 'google_translate_element');
+  new google.translate.TranslateElement({
+      pageLanguage: 'en',
+      layout: google.translate.TranslateElement.FloatPosition.TOP_RIGHT,
+      multilanguagePage: true,
+      gaTrack: true,
+      gaId: '{{ analytics_id }}'
+  }, 'google_translate_element');
 }
-</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+</script>
+<script type="text/javascript"
+        src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+</script>
 
