--- a/client/app/html/user_main_helpers/google_translate_meta_tags.html
+++ b/client/app/html/user_main_helpers/google_translate_meta_tags.html
@@ -32,7 +32,7 @@
 function googleTranslateElementInit() {
   new google.translate.TranslateElement({
       pageLanguage: 'en',
-      layout: google.translate.TranslateElement.FloatPosition.TOP_RIGHT,
+      layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
       multilanguagePage: true,
       gaTrack: true,
       gaId: '{{ analytics_id }}'
