Use language_code to tell google website translator which language the site is currently being rendered in.

--- a/client/app/html/user_main_helpers/google_translate_meta_tags.html
+++ b/client/app/html/user_main_helpers/google_translate_meta_tags.html
@@ -31,7 +31,7 @@
 <script type="text/javascript">
 function googleTranslateElementInit() {
   new google.translate.TranslateElement({
-      pageLanguage: 'en',
+      pageLanguage: '{{ language_code }}',
       layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
       multilanguagePage: true,
       gaTrack: true,
