reanamed SHOW_VIP_UPGRADE_OPTION

--- a/client/app/html/advertising/sidebar.html
+++ b/client/app/html/advertising/sidebar.html
@@ -4,7 +4,7 @@
 <div id="id-advertising-sidebar" class="grid_custom cl-grid_160px alpha omega cl-float_right">
 
     {% if guest_user_data_fields.registered_user_bool %}
-        {% if SHOW_VIP_UPGRADE_OPTION %}
+        {% if THIS_BUILD_ALLOWS_VIP_UPGRADES %}
             {% if not primary_user_presentation_data_fields.client_paid_status %}
                     <div class="cl-left-text cl-text-large-format"><br>
                         {% trans 'Become a' %}
