--- a/client/app/html/user_main_helpers/main_body.html
+++ b/client/app/html/user_main_helpers/main_body.html
@@ -266,7 +266,7 @@
 
 
 
-{% if SHOW_VIP_UPGRADE_OPTION %}
+{% if THIS_BUILD_ALLOWS_VIP_UPGRADES %}
 <div class="cl-clear"></div>
 <div class="grid_2 alpha">
     <strong>{% trans "VIP Status" %}:</strong><br>
