--- a/client/app/html/user_main_helpers/vip_purchase_main.html
+++ b/client/app/html/user_main_helpers/vip_purchase_main.html
@@ -30,7 +30,7 @@
 <div id="id-become_a_vip">
 
 
- {% if SHOW_VIP_UPGRADE_OPTION %}
+ {% if THIS_BUILD_ALLOWS_VIP_UPGRADES %}
 
     <div class="cl-left-text cl-text-large-format">
     <br><strong>
