--- a/client/app/html/user_main_helpers/vip_benefits.html
+++ b/client/app/html/user_main_helpers/vip_benefits.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-        {% if SHOW_VIP_UPGRADE_OPTION %}
+        {% if THIS_BUILD_ALLOWS_VIP_UPGRADES %}
         
         <ul>
 
