--- a/client/app/html/user_main_helpers/test_vip_benefits_dialog.html
+++ b/client/app/html/user_main_helpers/test_vip_benefits_dialog.html
@@ -103,27 +103,29 @@ function showOnlineStatusMainDialog() {
 
 function showAllVipBenefitsDialog(owner_nid) {
 
-    $("#id-show_vip_benefits_dialog_box")
-    .dialog({
-        width: '750',
-        height: '900'
-    });
-    $("#id-show_vip_benefits_dialog_box").dialog('open');
+    if (owner_nid) {
+        $("#id-show_vip_benefits_dialog_box")
+                .dialog({
+                    width: '750',
+                    height: '900'
+                });
+        $("#id-show_vip_benefits_dialog_box").dialog('open');
 
-    $('#id-show-loading-spinner').show();
+        $('#id-show-loading-spinner').show();
 
-    $.ajax({
-        type: 'get',
-        url:  "/rs/vip_purchase_main_html/" + owner_nid + "/",
-        success: function(data) {
-            {
-                $("#id-show_vip_benefits_dialog_box").html(data);
+        $.ajax({
+            type: 'get',
+            url: "/rs/vip_purchase_main_html/" + owner_nid + "/",
+            success: function (data) {
+                {
+                    $("#id-show_vip_benefits_dialog_box").html(data);
+                }
+            },
+            complete: function () {
+                $('#id-show-loading-spinner').hide();
             }
-        },
-        complete: function () {
-            $('#id-show-loading-spinner').hide();
-        }
-    });
+        });
+    }
 }
 
 $(document).on("click",'.cl-see_all_vip_benefits', function(e) {
