Corrected translation error.

--- a/client/app/html/common_helpers/logo_banner.html
+++ b/client/app/html/common_helpers/logo_banner.html
@@ -34,7 +34,7 @@
                     View in <a class="cl-setlang" href="/setlang/en">English</a>
                 {% endif %}
                 {% if request.LANGUAGE_CODE == 'en' %}
-                    Mirar en <a class="cl-setlang" href="/setlang/es">Español</a>
+                    Ver en <a class="cl-setlang" href="/setlang/es">Español</a>
                 {% endif %}
             </div>
         </div>
