--- a/client/app/html/common_helpers/footer.html
+++ b/client/app/html/common_helpers/footer.html
@@ -20,14 +20,18 @@
 
 <div class="cl-clear"></div>
 
-<!-- Please do not remove the "Powered by LexaLink" icon and link to the LexaLink website -->
-<!-- Removing this link will be considered a violation of the licensing agreement. -->
 
-<div class="cl-center-text" id="id-lexalink_container">
+<div class="cl-center-text">
+    <!-- These spaces ensure that the terms and conditions are not hidden behind the chat boxes -->
     <br>
-    <a href="http://www.lexalink.com"><img src="/images/LexaLink_button.png"
-     alt="Powered by the LexaLInk social network and dating platform for the Google App Engine"></a>
-    <br><br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 </div>
 
 
