Minor modification to menubar wording

--- a/client/app/html/user_main_helpers/menubar.html
+++ b/client/app/html/user_main_helpers/menubar.html
@@ -98,7 +98,7 @@
 
         <li class="top">
             <a href="{% url 'edit_profile_url' display_nid=primary_user_presentation_data_fields.owner_nid %}" class="top_link">
-                <span>{% trans "My Profile" %} [ {{ primary_user_presentation_data_fields.username }} ]</span>
+                <span>{% trans "Edit or delete" %} {{ primary_user_presentation_data_fields.username }}</span>
             </a>
         </li>
 
