Added discounted paypal payments for current VIP members.

--- a/client/app/html/advertising/sidebar.html
+++ b/client/app/html/advertising/sidebar.html
@@ -16,6 +16,10 @@
                         {% trans 'Your VIP membership expires' %}
                         {{ primary_user_presentation_data_fields.client_paid_status_expiry_string }}.
                         <br><br>
+                        {% trans 'Extend your' %} <strong><a class="cl-see_all_vip_benefits" href="#">
+                        {% trans 'VIP membership' %}</a></strong>
+                        {% trans 'before it expires, and receive <strong>huge discounts</strong>' %}.
+
                     </div>
             {% endif %}
 
