Show discount percantage for VIP purchase. Fixed some translation errors.

--- a/client/app/html/advertising/sidebar.html
+++ b/client/app/html/advertising/sidebar.html
@@ -16,9 +16,12 @@
                         {% trans 'Your VIP membership expires' %}
                         {{ primary_user_presentation_data_fields.client_paid_status_expiry_string }}.
                         <br><br>
-                        {% trans 'Extend your' %} <strong><a class="cl-see_all_vip_benefits" href="#">
-                        {% trans 'VIP membership' %}</a></strong>
-                        {% trans 'before it expires, and receive <strong>huge discounts</strong>' %}.
+                        {% trans 'Extend your' %}
+                        {% trans 'VIP membership' %}
+                        {% trans 'before it expires, and receive a' %}
+                        <strong><a class="cl-see_all_vip_benefits" href="#">
+                        {% trans 'big discount' %}
+                        </a></strong>
 
                     </div>
             {% endif %}
