--- a/client/app/html/user_main_helpers/paypal_purchase_form.html
+++ b/client/app/html/user_main_helpers/paypal_purchase_form.html
@@ -20,7 +20,7 @@
 
         <input type="hidden" name="cmd" value="_xclick">
         <input type="hidden" name="business" value="{{ paypal_data.paypal_account }}">
-        <input type="hidden" name="item_name" value="{{ app_name }} {% trans 'VIP Membership' %}">
+        <input type="hidden" name="item_name" value="{{ app_name }} {% trans 'VIP Membership Purchase' %}">
         <input type="hidden" name="lc" value="{{ paypal_data.language }}"> <!-- Language code -->
 
         <input type="hidden" name="currency_code" value="{{ paypal_data.currency_code }}">
