--- a/client/app/html/user_main_helpers/paypal_purchase_form.html
+++ b/client/app/html/user_main_helpers/paypal_purchase_form.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
-{% if paypal_data.country_override %}
-    <h1>Warning - PayPal country override to {{ paypal_data.country_code }}</h1>
+{% if payments_common_data.country_override %}
+    <h1>Warning - PayPal country override to {{ payments_common_data.country_code }}</h1>
 {% endif %}
 
 {% if paypal_data.testing_paypal_sandbox %}
@@ -16,12 +16,12 @@
 {% endif %}
         <input type="hidden" name="charset" value="utf-8">
         <input type="hidden" name="notify_url" value="http://{{ request.META.HTTP_HOST }}/paypal/ipn/">
-        <input type="hidden" name="custom" value="site:{{ request.META.HTTP_HOST }}; username:{{ paypal_data.username }}; nid:{{ paypal_data.owner_nid }}; flag:{{ paypal_data.user_has_discount_flag }}; ">
+        <input type="hidden" name="custom" value="site:{{ request.META.HTTP_HOST }}; username:{{ payments_common_data.username }}; nid:{{ payments_common_data.owner_nid }}; flag:{{ payments_common_data.user_has_discount_flag }}; ">
 
         <input type="hidden" name="cmd" value="_xclick">
         <input type="hidden" name="business" value="{{ paypal_data.paypal_account }}">
         <input type="hidden" name="item_name" value="{{ app_name }} {% trans 'VIP Membership Purchase' %}">
-        <input type="hidden" name="lc" value="{{ paypal_data.language }}"> <!-- Language code -->
+        <input type="hidden" name="lc" value="{{ payments_common_data.language }}"> <!-- Language code -->
 
         <input type="hidden" name="currency_code" value="{{ paypal_data.currency_code }}">
             <p>
