--- a/client/app/html/user_main_helpers/paysafecard_purchase_form.html
+++ b/client/app/html/user_main_helpers/paysafecard_purchase_form.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
-{% if paysafecard_data.country_override %}
-        <h1>Warning - country override to {{ paysafecard_data.country_code }}</h1>
+{% if payments_common_data.country_override %}
+        <h1>Warning - country override to {{ payments_common_data.country_code }}</h1>
 {% endif %}
 
 {% if paysafecard_data.testing_paysafecard %}
@@ -15,7 +15,7 @@
         <p>
         <input type="hidden" name="charset" value="utf-8">
         <input type="hidden" name="currency_code" value="{{ paysafecard_data.currency_code }}">
-        <input type="hidden" name="owner_nid" value="{{ paysafecard_data.owner_nid }}">
+        <input type="hidden" name="owner_nid" value="{{ payments_common_data.owner_nid }}">
         {{ paysafecard_data.radio_options|safe }}
         <p>
         <input class="cl-payment_button" type="submit" name="submit" value="{% trans 'Purchase' %}">
