Removed bold text on payment link

--- a/client/app/html/advertising/sidebar.html
+++ b/client/app/html/advertising/sidebar.html
@@ -22,9 +22,9 @@
                                         {% trans 'If you extend your' %}
                                         {% trans 'VIP membership' %}
                                         {% trans 'before it expires, then you can' %}
-                                        <strong><a class="cl-see_all_vip_benefits" href="#">
+                                        <a class="cl-see_all_vip_benefits" href="#">
                                         {% trans 'take advantage of a special price' %}.
-                                        </a></strong>
+                                        </a>
                                         {% trans 'Offer expires' %} {{ primary_user_presentation_data_fields.client_paid_status_expiry_string }}.
                             {% endif %}
                     </span>
