Removed Erotic Encounters section from RomanceSecreto.

--- a/client/app/html/user_main_helpers/main_body.html
+++ b/client/app/html/user_main_helpers/main_body.html
@@ -221,7 +221,7 @@
     {% endif %}
     <!------------------------------------------------------------>
 
-    {% if build_name == "discrete_build" or build_name == "gay_build" or build_name == "swinger_build" %}
+    {% if build_name == "gay_build" or build_name == "swinger_build" %}
     {{ html_for_main.erotic_encounters|safe }}
     {% endif %}
 
