--- a/client/app/html/user_main_helpers/photos.html
+++ b/client/app/html/user_main_helpers/photos.html
@@ -5,17 +5,8 @@
 <!-- only primary user can upload photos to their account - otherwise, we are displaying photos
      for other clients in the system -->
 
-    <div id="id-show_photo_rules_popup" style="display:none;">
-        <strong>{% trans "General information" %}</strong>
-        {% include "user_main_helpers/photo_instructions.html" %}
-        <strong>{% trans "Photo rules:" %}</strong>
+    <div id="id-show_photo_rules_popup" class='cl-photo-rules-popup' style="display:none;">
         {% include "user_main_helpers/photo_rules.html" %}
-        <strong>{% trans "Public photos rules" %}</strong>
-        {% include "user_main_helpers/photos_public.html" %}
-        <strong>{% trans "Private photos rules" %}</strong>
-        {% include "user_main_helpers/photos_private.html" %}
-        <strong>{% trans "Prohibited photos" %}</strong>
-        {% include "user_main_helpers/photos_prohibited.html" %}
         <br><br><input type="button" class="cl-submit" id="id-show_photo_rules_popup-close" alt="" value="{% trans 'I understand and accept these rules' %}">
     </div>
 
