Fixed minor spelling error.

--- a/client/app/html/user_main_helpers/vip_membership_upgrade_message.html
+++ b/client/app/html/user_main_helpers/vip_membership_upgrade_message.html
@@ -3,7 +3,7 @@
 {% if payments_common_data.user_has_discount %}
     <p>
     {% blocktrans %}
-        Since you are currently a VIP member, any additional cuota that you purchase will be used to extend
+        Since you are currently a VIP member, any additional quota that you purchase will be used to extend
         the duration of your VIP membership.
     {% endblocktrans %}
     </p>
