Reduced membership options. New maximimum allocation is 3 months.

--- a/client/app/html/user_main_helpers/vip_payment_options.html
+++ b/client/app/html/user_main_helpers/vip_payment_options.html
@@ -35,7 +35,7 @@
 
         <p>
             {% blocktrans %}
-            This is a one-time VIP membership payment that does not automatically renew.
+            This is a one-time VIP membership payment that <strong>does not automatically renew</strong>.
             {% endblocktrans %}
 
     </div>
@@ -55,7 +55,7 @@
 
         <p>
             {% blocktrans %}
-            This is a one-time VIP membership payment that does not automatically renew.
+            This is a one-time VIP membership payment that <strong>does not automatically renew</strong>.
             {% endblocktrans %}
 
         <p>
@@ -84,7 +84,7 @@
 
         <p>
             {% blocktrans %}
-            This is a one-time VIP membership payment that does not automatically renew.
+            This is a one-time VIP membership payment that <strong>does not automatically renew</strong>.
             {% endblocktrans %}
 
     </div>
